# python-project-52

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
task_manager/: settings.py  tests.py  urls.py  views.py
task_manager/labels/: tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: layout.html
task_manager/templates/statuses/: update.html
task_manager/templates/tasks/: index.html  show.html
task_manager/templates/users/: login.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
